Room created (Rxjava needed)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/addButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="addButtonOnClick"
         android:text="Add Item" />
 
     <!-- Altında bir RecyclerView -->
